2005-10-18  Chong Yidong  <cyd@stupidchicken.com>

	* image.el (create-image, find-image): Mention max-image-size in
	docstring.

2005-10-18  Stefan Monnier  <monnier@iro.umontreal.ca>

	* textmodes/conf-mode.el: Don't use font-lock-defaults-alist.
	Various docstring and line-width fixups.
	(conf-mode): Use cond.
	Set font-lock-defaults.  Don't set comment-use-syntax.

2005-10-18  David Ponce  <david@dponce.com>

	* tree-widget.el (tree-widget-button-click): New function.
	(tree-widget-button-keymap): Use it.

2005-10-18  Romain Francoise  <romain@orebokech.com>

	* bookmark.el (bookmark-insert-location, bookmark-bmenu-list)
	(bookmark-bmenu-hide-filenames): Add follow-link property.
	Improve help-echo text.

	* ffap.el (find-file-at-point): Doc fix.

2005-10-18  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* mouse.el (mouse-set-region): Don't do sit-for on a mac frame.

2005-10-18  Masatake YAMATO  <jet@gyve.org>

	Install to the CVS repository what I forgot to install in my
	2005-10-16 changes.

	* progmodes/python.el (python-complete-symbol): Pass the common
	prefix substring of completion to `display-completion-list'.

	* textmodes/org.el (org-complete): Ditto.

2005-10-18  Masatake YAMATO  <jet@gyve.org>

	Fix a bug reported by Sven Joachim <sven_joachim@web.de>.

	* woman.el (WoMan-xref-man-page): New button type derived
	from `Man-abstract-xref-man-page'.
	(woman-mode): Pass `WoMan-xref-man-page' to `Man-highlight-references'.

	* man.el (Man-abstract-xref-man-page): New button type.
	(Man-xref-man-page): Make it derived from `Man-abstract-xref-man-page'.
	(Man-highlight-references): Add new optional argument `xref-man-type'.

2005-10-18  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gud.el (gud-menu-map): Correct condition for fringe.

2005-10-17  Chong Yidong  <cyd@stupidchicken.com>

	* cus-edit.el (Custom-move-and-invoke): Delete.
	(custom-mode-map): Bind mouse-1 to widget-move-and-invoke.
